--- a/Grocery.App/Views/ProductView.xaml
+++ b/Grocery.App/Views/ProductView.xaml
@@ -25,6 +25,7 @@
                     </Grid.ColumnDefinitions>
                     <Label Text="Naam van het product" Grid.Column="0" FontAttributes="Bold"/>
                     <Label Text="Voorraad" Grid.Column="1" HorizontalTextAlignment="End" FontAttributes="Bold"/>
+                    <Label Text="Prijs" Grid.Column="1" HorizontalTextAlignment="Center" FontAttributes="Bold"/>
                     <Label Text="THT datum" Grid.Column="2" HorizontalTextAlignment="End" FontAttributes="Bold"/>
                 </Grid>
             </CollectionView.Header>
@@ -44,6 +45,7 @@
                                 </DataTrigger>
                             </Label.Triggers>
                         </Label>
+                        <Label Grid.Column="1" Text="{Binding Price, StringFormat='€ {0:F2}'}" HorizontalOptions="Center"/>
                         <Label Grid.Column="2" Text="{Binding ShelfLife}" HorizontalOptions="End"/>
                     </Grid>
                 </DataTemplate>
